# WebServer

./: CMakeLists.txt  main.cpp
Client/: Client.cpp  Client.h
Http/: Http.cpp  Http.h
Resource/: Resource.cpp  Resource.h
Server/: Server.cpp  Server.h
Signal/: Signals.cpp  Signals.h
Socket/: Socket.cpp  Socket.h
